logs/pyfspot.log
Listing '.'...
Listing './bin'...
Compiling './bin/dump_exif.py'...
Compiling './bin/getgps.py'...
***   File "./bin/getgps.py", line 13
    print ef.get_geo()
           ^
SyntaxError: invalid syntax

Compiling './bin/noop.py'...
Compiling './bin/setgps.py'...
Compiling './bin/timezone.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/fixture'...
Listing './lib/python3.5/site-packages/fixture/command'...
Listing './lib/python3.5/site-packages/fixture/command/generate'...
Listing './lib/python3.5/site-packages/fixture/dataset'...
Listing './lib/python3.5/site-packages/fixture/examples'...
Listing './lib/python3.5/site-packages/fixture/examples/db'...
Listing './lib/python3.5/site-packages/fixture/loadable'...
Listing './lib/python3.5/site-packages/fixture/setup_cmd'...
Listing './lib/python3.5/site-packages/fixture/test'...
Listing './lib/python3.5/site-packages/fixture/test/test_command'...
Listing './lib/python3.5/site-packages/fixture/test/test_command/test_generate'...
Listing './lib/python3.5/site-packages/fixture/test/test_loadable'...
Listing './lib/python3.5/site-packages/fixture/test/test_loadable/test_django'...
Listing './lib/python3.5/site-packages/fixture-1.5.11.egg-info'...
Listing './lib/python3.5/site-packages/pexif-0.15.egg-info'...
Compiling './lib/python3.5/site-packages/pexif.py'...
***   File "./lib/python3.5/site-packages/pexif.py", line 125
    print each,
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyfspot'...
Compiling './lib/python3.5/site-packages/pyfspot/controller.py'...
***   File "./lib/python3.5/site-packages/pyfspot/controller.py", line 144
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyfspot/main.py'...
***   File "./lib/python3.5/site-packages/pyfspot/main.py", line 83
    print p.path
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyfspot-0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './share'...
Listing './share/python-wheels'...
